Add aggregation max/min + in report
